--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <i class="fas fa-bars"></i>
             </a>
             <ul class="dropdown">
-                <li><a href="">Inicio</a></li>
                 <li><a href="">Tu Carrito</a></li>
             </ul>
         </nav>
@@ -29,36 +28,36 @@
             <div class="imgcontainer">
                 <span class="corazon"><i class="far fa-heart"></i></span>
                 <img src="./assets/fotos/gatito.jpg" class="gato" alt="">
-                <p class="info">Gato de la fortuna blanco.</p>
-                <p class="precio">$550</p>
-                <button>Más info</button>
+                <h2 class="info">Gato de la fortuna blanco.</h2>
+                <h3 class="precio">$550</h3>
+                <button><h4 class="info">Más info</h4></button>
             </div>
         </div>
         <div class="product">
             <div class="imgcontainer">
                 <span class="corazon"><i class="far fa-heart"></i></span>
                 <img src="./assets//fotos/farol.jpg" class="farol" alt="">
-                <p class="info">Lampara de mesa con forma de arbol.</p>
-                <p class="precio">$300</p>
-                <button>Más info</button>
+                <h2 class="info">Lampara de mesa con forma de arbol.</h2>
+                <h3 class="precio">$300</h3>
+                <button><h4 class="info">Más info</h4></button>
             </div>
         </div>
         <div class="product">
             <div class="imgcontainer">
                 <span class="corazon"><i class="far fa-heart"></i></span>
                 <img src="./assets/fotos/conjunto.jpg" class="platos" alt="">
-                <p class="info">Conjunto de palillos chinos, sartenes y platos de gatos.</p>
-                <p class="precio">$1700</p>  
-                <button>Más info</button>
+                <h2 class="info">Conjunto de palillos chinos, sartenes y platos de gatos.</h2>
+                <h3 class="precio">$1700</h3>  
+                <button><h4 class="info">Más info</h4></button>
             </div>
         </div>
         <div class="product">
             <div class="imgcontainer">
                 <span class="corazon"><i class="far fa-heart"></i></span>
                 <img src="./assets/fotos/Kimono.jpg" class="kimono" alt="">
-                <p class="info">Kimono unisex celeste con rayas blancas.</p>
-                <p class="precio">$1200</p>
-                <button>Más info</button>
+                <h2 class="info">Kimono unisex celeste con rayas blancas.</h2>
+                <h3 class="precio">$1200</h3>
+                <button><h4 class="info">Más info</h4></button>
             </div>
         </div>
     </main>
